syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 角色服务
service RoleService {
  // 查询角色列表
  rpc List (pagination.PagingRequest) returns (ListRoleResponse) {}

  // 查询角色详情
  rpc Get (GetRoleRequest) returns (Role) {}

  // 创建角色
  rpc Create (CreateRoleRequest) returns (google.protobuf.Empty) {}

  // 更新角色
  rpc Update (UpdateRoleRequest) returns (google.protobuf.Empty) {}

  // 删除角色
  rpc Delete (DeleteRoleRequest) returns (google.protobuf.Empty) {}

  // 批量创建角色
  rpc BatchCreate (BatchCreateRolesRequest) returns (BatchCreateRolesResponse) {}

  // 根据角色ID列表获取角色值列表
  rpc GetRoleCodesByRoleIds(GetRoleCodesByRoleIdsRequest) returns (GetRoleCodesByRoleIdsResponse) {}

  // 根据角色值列表获取角色列表
  rpc GetRolesByRoleCodes(GetRolesByRoleCodesRequest) returns (ListRoleResponse) {}

  // 根据角色值列表获取角色列表
  rpc GetRolesByRoleIds(GetRolesByRoleIdsRequest) returns (ListRoleResponse) {}
}

// 角色
message Role {
  // 角色状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  // 角色类型
  enum Type {
    SYSTEM = 0; // 内置角色（不可删除、不可修改 code）
    CUSTOM = 1; // 自定义角色
  }

  // 数据权限范围
  enum DataScope {
    DATA_SCOPE_UNSPECIFIED = 0;

    ALL = 1;              // 全部数据：可跨租户或租户内所有 Unit (取决于 tenant_id)
    SELF = 2;             // 仅限本人：只能看到 owner_id 等于自己的数据

    UNIT_ONLY = 3;        // 仅限当前所属 OrgUnit：不含子节点
    UNIT_AND_CHILD = 4;   // 当前所属 OrgUnit 及所有递归子节点

    SELECTED_UNITS = 5;   // 自定义组织单元列表
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "角色名称"}
  ];  // 角色名称

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {description: "角色标识码（如：ADMIN, VIEWER）"}
  ];  // 角色标识码（如：ADMIN, VIEWER）

  optional int32 sort_order = 4 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "排序顺序，值越小越靠前"}
  ];  // 排序顺序，值越小越靠前

  optional Status status = 5 [(gnostic.openapi.v3.property) = {description: "状态"}, json_name = "status"];  // 状态

  optional Type type = 6 [(gnostic.openapi.v3.property) = {description: "角色类型"}, json_name = "type"];  // 角色类型

  optional DataScope data_scope = 7 [
    json_name = "dataScope",
    (gnostic.openapi.v3.property) = {description: "数据权限范围"}
  ];  // 数据权限范围

  optional string remark = 8 [json_name = "remark", (gnostic.openapi.v3.property) = {description: "备注"}];  // 备注

  repeated uint32 custom_org_unit_ids = 10 [
    json_name = "customOrgUnitIds",
    (gnostic.openapi.v3.property) = {description: "当 DataScope 为 SELECTED_UNITS 时关联的组织单元列表"}
  ]; // 当 DataScope 为 SELECTED_UNITS 时关联的组织单元列表

  repeated string permissions = 11 [
    json_name = "permissions",
    (gnostic.openapi.v3.property) = {description: "权限点列表（如：user:add, file:delete）"}
  ]; // 权限点列表（如：user:add, file:delete）

  repeated uint32 menus = 12 [
    json_name = "menus",
    (gnostic.openapi.v3.property) = {description: "绑定的菜单ID列表"}
  ];  // 绑定的菜单ID列表

  repeated uint32 apis = 13 [
    json_name = "apis",
    (gnostic.openapi.v3.property) = {description: "分配的API列表"}
  ];  // 分配的API列表

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 parent_id = 50 [json_name = "parentId", (gnostic.openapi.v3.property) = {description: "父节点ID"}];  // 父节点ID
  repeated Role children = 51 [json_name = "children", (gnostic.openapi.v3.property) = {description: "子节点树"}];  // 子节点树

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 角色列表 - 答复
message ListRoleResponse {
  repeated Role items = 1;
  uint64 total = 2;
}

// 角色数据 - 请求
message GetRoleRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建角色 - 请求
message CreateRoleRequest {
  Role data = 1;
}

// 更新角色 - 请求
message UpdateRoleRequest {
  uint32 id = 1;

  Role data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除角色 - 请求
message DeleteRoleRequest {
  uint32 id = 1;
}

message BatchCreateRolesRequest {
  repeated Role data = 1;
}
message BatchCreateRolesResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "创建成功的角色ID列表"
    }
  ]; // 创建成功的角色ID列表
}

message GetRoleCodesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}
message GetRoleCodesByRoleIdsResponse {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];
}

message GetRolesByRoleCodesRequest {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

message GetRolesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}
