syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";


// 角色元数据
message RoleMetadata {
  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色元数据ID"}
  ];  // 角色元数据ID

  optional uint32 role_id = 2 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional bool is_template = 3 [
    json_name = "isTemplate",
    (gnostic.openapi.v3.property) = {description: "是否是模版"}
  ];  // 是否是模版

  optional string template_for = 4 [
    json_name = "templateFor",
    (gnostic.openapi.v3.property) = {description: "模板适用对象"}
  ];  // 模板适用对象

  optional int32 template_version = 5 [
    json_name = "templateVersion",
    (gnostic.openapi.v3.property) = {description: "模板版本号"}
  ];  // 模板版本号

  optional int32 last_synced_version = 6 [
    json_name = "lastSyncedVersion",
    (gnostic.openapi.v3.property) = {description: "上次同步的版本号"}
  ];  // 上次同步的版本号

  repeated string custom_overrides = 7 [
    json_name = "customOverrides",
    (gnostic.openapi.v3.property) = {description: "自定义覆盖项"}
  ];  // 自定义覆盖项

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}
